# upstox-rust-sdk

./: .gitignore  Cargo.toml  README.md  build.rs  mod.rs
examples/api_usage/: Cargo.toml
examples/api_usage/src/: main.rs
examples/fetch_instruments/: Cargo.toml
examples/fetch_instruments/src/: main.rs
examples/login_usage/: Cargo.toml
examples/login_usage/src/: main.rs
examples/ws_usage/: Cargo.toml
examples/ws_usage/src/: main.rs
src/: client.rs  constants.rs  lib.rs  main.rs  rate_limiter.rs  utils.rs  ws_client.rs
src/apis/: charges.rs  expired_instruments.rs  gtt_orders.rs  historical_data.rs  instruments.rs  login.rs  margins.rs  market_information.rs  market_quote.rs  mod.rs  option_chain.rs  orders.rs  portfolio.rs  trade_profit_and_loss.rs  user.rs
src/models/: error_response.rs  mod.rs  success_response.rs
src/models/charges/: brokerage_details_request.rs  brokerage_details_response.rs  mod.rs
src/models/expired_instruments/: expired_derivative_contracts_request.rs  expired_future_contracts_response.rs  expired_historical_candle_data_request.rs  expiries_request.rs  mod.rs
src/models/gtt_orders/: cancel_gtt_order_request.rs  gtt_order_details_request.rs  gtt_order_details_response.rs  gtt_orders_response.rs  mod.rs  modify_gtt_order_request.rs  place_gtt_order_request.rs
src/models/historical_data/: candle_data_response.rs  historical_candle_data_request.rs  historical_candle_data_v3_request.rs  intraday_candle_data_request.rs  intraday_candle_data_v3_request.rs  mod.rs
src/models/instruments/: instruments_response.rs  mod.rs
src/models/login/: dialog_request.rs  google_oauth2_request.rs  google_oauth2_response.rs  mod.rs  token_request.rs  token_response.rs
src/models/margins/: margin_details_request.rs  margin_details_response.rs  mod.rs
src/models/market_information/: exchange_status_request.rs  exchange_status_response.rs  market_holidays_request.rs  market_holidays_response.rs  market_timings_request.rs  market_timings_response.rs  mod.rs
src/models/market_quote/: full_market_quotes_request.rs  full_market_quotes_response.rs  ltp_quotes_request.rs  ltp_quotes_response.rs  ltp_quotes_v3_response.rs  mod.rs  ohlc_quotes_request.rs  ohlc_quotes_response.rs  ohlc_quotes_v3_response.rs  option_greeks_request.rs  option_greeks_response.rs
src/models/option_chain/: mod.rs  option_contracts_request.rs  option_contracts_response.rs  put_call_option_chain_request.rs  put_call_option_chain_response.rs
src/models/orders/: cancel_multi_order_request.rs  cancel_multi_order_response.rs  cancel_order_request.rs  exit_all_positions_request.rs  mod.rs  modify_order_request.rs  order_details_request.rs  order_details_response.rs  order_response.rs  order_trades_request.rs  orders_response.rs  place_multi_order_request.rs  place_multi_order_response.rs  place_order_request.rs  place_order_v3_request.rs  trade_details_response.rs  trade_history_request.rs  trade_history_response.rs
src/models/portfolio/: convert_positions_request.rs  convert_positions_response.rs  holdings_response.rs  mod.rs  positions_response.rs
src/models/trade_profit_and_loss/: mod.rs  pnl_report_meta_data_request.rs  pnl_report_meta_data_response.rs  profit_loss_request.rs  profit_loss_response.rs  trades_charges_response.rs
src/models/user/: fund_and_margin_request.rs  fund_and_margin_response.rs  mod.rs  profile_response.rs
src/models/ws/: market_data_feed_message.rs  market_data_feed_v3_message.rs  mod.rs  portfolio_feed_request.rs  portfolio_feed_response.rs
src/utils/: mod.rs  serde_spaced_lowercase.rs
