[package]
name = "upstox-rust-sdk"
version = "0.1.3"
edition = "2021"
authors = ["Aviral Omar", "aviralomar0301@gmail.com"]
categories = ["api-bindings", "asynchronous"]
description = "SDK to access Upstox's Uplink v2 APIs programmatically"
keywords = ["upstox", "uplink", "sdk"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/Aviral-Omar/upstox-rust-sdk"

[dependencies]
async-imap = { version = "0.9.7", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5.0", default-features = false, features = ["runtime-tokio"] }
async-trait = "0.1.80"
chrono = "0.4.38"
ezsockets = { version = "0.6.2", features = ["native-tls"] }
fantoccini = "0.19.3"
flate2 = "1.0.30"
futures = "0.3.30"
mailparse = "0.15.0"
protobuf = "3.5.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
scraper = "0.19.0"
serde = "1.0.203"
serde_json = "1.0.117"
serde_valid = "0.24.0"
serde_with = "3.8.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.10.2", features = ["signal"]}
tracing = "0.1.40"
url_open = "0.0.2"
urlencoding = "2.1.3"

[build-dependencies]
protobuf-codegen = "3.5.0"
